Bug 592777 - nsLocaleService tries to use nsIGConfService before it is registered. r=romaxa a=npodb