intl/locale/src/nsLocaleService.cpp
@@ -35,6 +35,11 @@
  *
  * ***** END LICENSE BLOCK ***** */
 
+#ifdef MOZ_ENABLE_MEEGOTOUCH
+// It's necessary to include this before realloc gets macroed.
+#include <mgconfitem.h>
+#endif
+
 #include "nsCOMPtr.h"
 #include "nsILocale.h"
 #include "nsILocaleService.h"
@@ -60,9 +65,6 @@
 #  include <locale.h>
 #  include <stdlib.h>
 #  include "nsIPosixLocale.h"
-#if (MOZ_PLATFORM_MAEMO >= 6)
-#  include "nsIGConfService.h"
-#endif
 #endif
 
 //
@@ -95,6 +97,18 @@ static int posix_locale_category[LocaleListLength] =
   LC_CTYPE
 #endif
 };
+#endif
+
+#ifdef MOZ_ENABLE_MEEGOTOUCH
+static void CopyGConfToEnv(const char* gconf, const char* env)
+{
+    MGConfItem item(gconf);
+    QVariant value = item.value();
+    if (QVariant::String == value.type()) {
+        const QByteArray& array = value.toString().toAscii();
+        setenv(env, array.constData(), 1);
+    } // else it's an incompatible type or QVariant::Invalid (not set)
+}
 #endif
 
 //
@@ -178,24 +192,18 @@ nsLocaleService::nsLocaleService(void)
             return; 
         }
 
+#ifdef MOZ_ENABLE_MEEGOTOUCH
+        // Create a snapshot of the gconf locale values into the
+        // corresponding environment variables to obey system settings
+        // as accurately as possible.
+        CopyGConfToEnv("/meegotouch/i18n/language", "LANG");
+        CopyGConfToEnv("/meegotouch/i18n/lc_collate", NSILOCALE_COLLATE);
+        CopyGConfToEnv("/meegotouch/i18n/lc_monetary", NSILOCALE_MONETARY);
+        CopyGConfToEnv("/meegotouch/i18n/lc_numeric", NSILOCALE_NUMERIC);
+        CopyGConfToEnv("/meegotouch/i18n/lc_time", NSILOCALE_TIME);
+#endif
         // Get system configuration
         const char* lang = getenv("LANG");
-#if (MOZ_PLATFORM_MAEMO >= 6)
-        nsCAutoString gconfLocaleString;
-        nsresult rv;
-        nsCOMPtr<nsIGConfService> gconf =
-            do_GetService(NS_GCONFSERVICE_CONTRACTID, &rv);
-        if (NS_SUCCEEDED(rv)) {
-            rv = gconf->GetString(NS_LITERAL_CSTRING("/meegotouch/i18n/language"),
-                                  gconfLocaleString);
-            if (NS_SUCCEEDED(rv) && !gconfLocaleString.IsEmpty()) {
-                lang = gconfLocaleString.get();
-                // For setlocale() doing the right thing we need to export
-                // this as LANG to the environment
-                setenv("LANG", lang, 1);
-            }
-        }
-#endif
         for( i = 0; i < LocaleListLength; i++ ) {
             nsresult result;
             // setlocale( , "") evaluates LC_* and LANG
